crates/ship-code/src/snapshots/ship_code__engine__tests__edit_find_replace_not_found.snap
---
source: crates/ship-code/src/engine.rs
expression: output
---
ERROR: Edit failed on 'lib.rs': text not found: "nonexistent_string"
Hint: line numbers are 1-indexed. The file has 7 lines.

[snapshot: 0 | shadow commits: 0]
