crates/ship-code/src/snapshots/ship_code__engine__tests__read_file_range.snap
---
source: crates/ship-code/src/engine.rs
expression: result.format()
---
lib.rs:2-4 (7 lines total)
   2 │     println!("hello");
   3 │ }
   4 │ 

[snapshot: 0 | shadow commits: 0]
