crates/ship-code/src/snapshots/ship_code__engine__tests__read_node_found.snap
---
source: crates/ship-code/src/engine.rs
expression: result.format()
---
fn hello [lib.rs:1-3]
```
fn hello() {
    println!("hello");
}
```

[snapshot: 0 | shadow commits: 0]
