crates/ship-code/src/snapshots/ship_code__engine__tests__read_node_not_found_suggests.snap
---
source: crates/ship-code/src/engine.rs
expression: result.format()
---
ERROR (read_node): No symbol matching 'fn nonexistent' in 'lib.rs'.
Available symbols:
  fn hello (line 1)
  fn world (line 5)

[snapshot: 0 | shadow commits: 0]
