crates/ship-code/src/snapshots/ship_code__engine__tests__search_no_results_gives_hints.snap
---
source: crates/ship-code/src/engine.rs
expression: output
---
No matches found for query 'zzz_nonexistent_zzz' (filtered to *.rs).

Hint: try case_sensitive: false. Try removing the file_glob filter. The query is tried as regex first, then as literal text.

[snapshot: 0 | shadow commits: 0]
