crates/ship-code/src/snapshots/ship_code__engine__tests__undo_snapshot_zero.snap
---
source: crates/ship-code/src/engine.rs
expression: output
---
ERROR: Snapshot 0 does not exist. Valid range: 1-1.
Hint: use { "op": "undo", "snapshot": N } where N is the snapshot you want to restore to.

[snapshot: 1 | shadow commits: 1 | undo available: 1-1]
