crates/ship-code/src/snapshots/ship_code__engine__tests__undo_with_no_edits.snap
---
source: crates/ship-code/src/engine.rs
expression: output
---
ERROR: Nothing to undo. No edits have been made yet.

[snapshot: 0 | shadow commits: 0]
